[project]
name = "cryptonoise-ksampler"
description = "Drop-in replacement for ComfyUI's standard KSampler that embeds cryptographic proof of authorship directly into generated images through deterministic noise injection into the latent representation."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core dependencies", "torch>=2.0.0,<3.0.0", "numpy>=1.24.0,<2.0.0", "# Development and testing dependencies", "pytest>=7.4.0,<8.0.0", "pytest-cov>=4.1.0,<5.0.0", "coverage>=7.2.0,<8.0.0", "flake8>=6.0.0,<7.0.0", "bandit>=1.7.5,<2.0.0", "black>=23.9.0,<24.0.0", "# Type checking (optional)", "mypy>=1.5.0,<2.0.0", "# Pre-commit hooks (optional)", "pre-commit>=3.3.0,<4.0.0"]

[project.urls]
Repository = "https://github.com/Shadowwalker0P/CryptoNoise-Ksampler"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Shadowwalker0P/CryptoNoise-Ksampler/wiki"
"Bug Tracker" = "https://github.com/Shadowwalker0P/CryptoNoise-Ksampler/issues"

[tool.comfy]
PublisherId = "shadowwalker"
DisplayName = "CryptoNoise-Ksampler"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

